traefik/traefik-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    name: traefik
    app.kubernetes.io/name: traefik
