traefik/traefik-ig.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pi-hole
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`pihole.home.arpa`)
    kind: Rule
    services:
    - name: pi-hole
      port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.home.arpa`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    certResolver: default
